# dask-playground

./: .gitignore  Dockerfile  docker-compose.yml  generate_data.py  pyproject.toml  readme.md
src/: blob_input.py  constants.py
